Corrected typos in class names

--- a/Modules/UserManager/Views/RolesManage/Index.cshtml
+++ b/Modules/UserManager/Views/RolesManage/Index.cshtml
@@ -17,7 +17,7 @@
 }
 <div id="Items-@Dnn.ModuleContext.ModuleId" style="margin: 2%!important;">
 
-    <h2 id="subtitle">@Localization.GetString("EditingSiteRoles", @SharedResourceFile)</h2>
+    <h2>@Localization.GetString("EditingSiteRoles", @SharedResourceFile)</h2>
     <hr />
 
     <div class="col-md-9">
