--- a/Modules/UserManager/Views/RolesManage/Edit.cshtml
+++ b/Modules/UserManager/Views/RolesManage/Edit.cshtml
@@ -44,7 +44,7 @@
 
         @Html.HiddenFor(m => m.RoleId)
     </fieldset>
-    <div class="buttomForm mt20">
+    <div class="buttonForm mt20">
         <button type="submit" class="dnnPrimaryAction">@Localization.GetString("Save", @ResourceFile)</button>
         <button id="cancelEdit" href="#" class="dnnSecondaryAction">@Dnn.LocalizeString("Cancel")</button>
     </div>
