Added CDNs for Icons and dnn-elements as well as some cleanup and added msg about suppressed warning CS1591

--- a/Modules/UserManager/Views/_ViewStart.cshtml
+++ b/Modules/UserManager/Views/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 @{
-    Layout = "~/DesktopModules/MVC/Upendo.Modules.UserManager/Views/Shared/_Layout.cshtml";
+  Layout = "~/DesktopModules/MVC/Upendo.Modules.UserManager/Views/Shared/_Layout.cshtml";
 }
+@*
+
+  REMINDER: Project has a suppressed warning: CS1591 Missing XML comment for publicly visible type or member
+
+  To turn this off, in Visual Studio go to: Project Properties > Build > Errors and warnings, then remove "1591" from Suppress warnings
+  Or, edit the project file (*.csproj) and remove the following line: <NoWarn>1591</NoWarn>
+
+*@
