--- a/Modules/UserManager/Views/Shared/_Layout.cshtml
+++ b/Modules/UserManager/Views/Shared/_Layout.cshtml
@@ -1,9 +1,49 @@
-@using DotNetNuke.Web.Client.ClientResourceManagement
+@using DotNetNuke.Web.Client.ClientResourceManagement;
+
+@*
+
+  REMINDER: Project has a suppressed warning: CS1591 Missing XML comment for publicly visible type or member
+
+  To turn this off, in Visual Studio go to: Project Properties > Build > Errors and warnings, then remove "1591" from Suppress warnings
+
+*@
+
 @{
-    var moduleId = Dnn.ModuleContext.ModuleId;
-    ClientResourceManager.RegisterStyleSheet(Dnn.DnnPage, "https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css");
-    ClientResourceManager.RegisterScript(Dnn.DnnPage, "https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js");
+
+  var moduleId = Dnn.ModuleContext.ModuleId;
+  ClientResourceManager.RegisterStyleSheet(page: Dnn.DnnPage,
+    filePath: "https://cdn.jsdelivr.net/npm/bootstrap@3/dist/css/bootstrap.min.css"
+  );
+  ClientResourceManager.RegisterScript(page: Dnn.DnnPage,
+    filePath: "https://cdn.jsdelivr.net/npm/bootstrap@3/dist/js/bootstrap.min.js"
+  );
+
+  @*
+    // Google Material Icons Search https://fonts.google.com/icons
+    // Docs, how-to https://developers.google.com/fonts/docs/material_icons#icon_font_for_the_web, https://www.w3schools.com/icons/google_icons_intro.asp
+    // <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    // Use Pipe (|) to add additional sets, e.g. https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round|Material+Icons+Sharp|Material+Icons+Two+Tone
+  *@
+  ClientResourceManager.RegisterStyleSheet(page: Dnn.DnnPage,
+    filePath: "https://fonts.googleapis.com/icon?family=Material+Icons",
+    priority: 111,
+    provider: "DnnPageHeaderProvider",
+    htmlAttributes: new Dictionary<string, string> { { "async defer crossorigin", "anonymous" } }
+  );
+
+  @*
+    // conversion to dnn-elements started around v1.01.03?
+    // note that we are doing type=module (esm)
+  *@
+  ClientResourceManager.RegisterScript(page: Dnn.DnnPage,
+    filePath: "https://cdn.jsdelivr.net/npm/@dnncommunity/dnn-elements@0/dist/dnn/dnn.esm.js",
+    priority: 112,
+    provider: "DnnPageHeaderProvider",
+    // htmlAttributes: new Dictionary<string, string> { { "type", "module" }, { "async defer crossorigin", "anonymous" } }
+    htmlAttributes: new Dictionary<string, string> { { "type", "module" }, { "crossorigin", "anonymous" } }
+  );
+
 }
-<div id="mvcContainer-@Dnn.ActiveModule.ModuleID">
-    @RenderBody()
+<div id="mvcContainer-@moduleId" class="wrapper-upendo-user-manager">
+  @RenderBody()
 </div>
