--- a/Modules/UserManager/Views/UserManage/ChangePassword.cshtml
+++ b/Modules/UserManager/Views/UserManage/ChangePassword.cshtml
@@ -38,7 +38,7 @@
             @Html.HiddenFor(m => m.UserId)
         </fieldset>
     </div>
-    <div class="buttonForm mt20">
+    <div class="buttomForm mt20">
         <div class="center">
             <button type="submit" class="primary" id="saveButton">Save</button>
             <button id="cancelEdit" href="#">@Dnn.LocalizeString("Cancel")</button>
