Cleanup for internal DevAccuraty Release (Beta)

--- a/Modules/UserManager/Module.css
+++ b/Modules/UserManager/Module.css
@@ -267,7 +267,7 @@
 }
 
 /* end wrapper-upendo-user-manager */
-/* version 1.01.02+ additions */
+/* version 1.09.00+ additions on Branch DevAccuraty */
 .wrapper-upendo-user-manager .field-validation-error {
   color: darkred;
   font-size: small;
