--- a/Modules/UserManager/Views/Shared/_Layout.cshtml
+++ b/Modules/UserManager/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
   );
 
   @*
-    // conversion to dnn-elements started around v1.01.03?
+    // conversion to dnn-elements started in DevAccuraty v1.09.00 20230909+ JRF
     // note that we are doing type=module (esm)
   *@
   ClientResourceManager.RegisterScript(page: Dnn.DnnPage,
