--- a/Modules/UserManager/Views/UserManage/Index.cshtml
+++ b/Modules/UserManager/Views/UserManage/Index.cshtml
@@ -17,7 +17,7 @@
 *@
 
 @{
-  bool isDebug = true;
+  bool isDebug = false;
 
   // Important: see 'lang' above, default GetString() is shared, otherwise pass in the resource file name
   // TODO? consolidate user module resources in to App_LocalResources/UserManager.resx and update Constants and LocalizationHelper accordingly
