--- a/Modules/UserManager/module.scss
+++ b/Modules/UserManager/module.scss
@@ -333,7 +333,7 @@
 } 
 /* end wrapper-upendo-user-manager */
 
-/* version 1.01.02+ additions */
+/* version 1.09.00+ additions on Branch DevAccuraty */
 .wrapper-upendo-user-manager {
   .field-validation-error {
     color: darkred;
