Removed styles in favor of module CSS

--- a/Modules/UserManager/Views/RolesManage/Index.cshtml
+++ b/Modules/UserManager/Views/RolesManage/Index.cshtml
@@ -94,8 +94,8 @@
                         </a>
                 </th>
                 <th>@Localization.GetString("Users", @ResourceFile)</th>
-                <th style="text-align:center">@Localization.GetString("Auto", @ResourceFile)</th>
-                <th style="text-align:center">@Localization.GetString("Actions", @ResourceFile)</th>
+                <th class="text-center">@Localization.GetString("Auto", @ResourceFile)</th>
+                <th class="text-center">@Localization.GetString("Actions", @ResourceFile)</th>
             </tr>
         </thead>
         <tbody>
