--- a/Modules/UserManager/Views/UserManage/Index.cshtml
+++ b/Modules/UserManager/Views/UserManage/Index.cshtml
@@ -1,5 +1,7 @@
 @inherits DotNetNuke.Web.Mvc.Framework.DnnWebViewPage<DataTableResponse<Upendo.Modules.UserManager.Models.DnnModel.Users>>
 
+@using DotNetNuke.Entities.Users;
+
 @using Upendo.Modules.UserManager.ViewModels;
 @using Upendo.Modules.UserManager.Components;
 @using Upendo.Modules.UserManager.Utility;
@@ -18,6 +20,7 @@
 
 @{
   bool isDebug = false;
+  var loggedInUser = UserController.Instance.GetCurrentUserInfo();
 
   // Important: see 'lang' above, default GetString() is shared, otherwise pass in the resource file name
   // TODO? consolidate user module resources in to App_LocalResources/UserManager.resx and update Constants and LocalizationHelper accordingly
@@ -198,8 +201,8 @@ else
       <div class="flex-container" style="height: 4rem; margin-bottom: 0.5rem;">
         <div class="left-group">
           <div class="left-item">
-            <dnn-searchbox id="Search" debounced placeholder="@Lang.GetString("Search") (type stuff and press enter)" query="@modelSearch"
-                           style="" title="Searches FirstName, DisplayName, Email, and Username">
+            <dnn-searchbox id="Search" debounced placeholder="@Lang.GetString("Search")" query="@modelSearch"
+              style="" title="Type stuff and press enter, it searches Username, FirstName, LastName, Email, and Display Name">
             </dnn-searchbox>
           </div>
           <div class="left-item">
@@ -260,8 +263,10 @@ else
               <span>@Lang.GetString("Email", resourceFilename)</span>
               @GetOptionalSortIcon("Email", modelOrderBy, modelOrder)
             </th>
-            <th style="text-align: center;" class="uppercase-text text-center">@Lang.GetString("Superuser", resourceFilename)</th>
-            <th style="text-align:center" class="text-center">@Lang.GetString("Actions", resourceFilename)</th>
+            <th class="uppercase-text text-center" 
+              title="Show deleted and other statuses" 
+            >@Lang.GetString("UserStatus.Text", resourceFilename)</th>
+            <th class="text-center">@Lang.GetString("Actions", resourceFilename)</th>
           </tr>
         </thead>
         <tbody>
@@ -278,6 +283,7 @@ else
           }
           else
           {
+            // loggedInUser is the current user, not the user being iterated/edited
             foreach (var item in Model.Data)
             {
               var repoUser = UserRepository.GetUser(Dnn.ModuleContext.PortalId, item.UserId);
@@ -287,10 +293,6 @@ else
                   @item.UserId
                 </td>
                 <td>
-                  @if (isDeleted)
-                  {
-                    <span>@Icon.Get(iconName: "remove", iconSet: "glyph", styleColor: "red")</span>
-                  }
                   <a data-hint="Edit" href="@Url.Action("Edit", "UserManage", new {ctl = "Edit", itemId = item.UserId})"
                      data-toggle="tooltip" data-placement="top" title="@Lang.GetString("Edit")">
                     @item.Username
@@ -304,18 +306,32 @@ else
                     @item.Email
                   </a>
                 </td>
-                <td class="text-center">
-                  @if (@item.IsSuperUser == true)
+                <td class="text-center ">
+                  @* User Status Icons *@
+                  @* 1. For SuperUsers, show users that are (also) SuperUsers *@
+                  @if (loggedInUser.IsSuperUser)
                   {
-                    @Icon.Google(iconName: "admin_panel_settings", iconSize: "lg", styleColor: "blue")
-                    @*<span class="glyphicon glyphicon-ok" aria-hidden="true" style="color:yellowgreen"></span>*@
+                    if (repoUser.IsSuperUser == true)
+                    {
+                      @Icon.Google(iconName: "local_police", iconSize: "lg", styleColor: "blue")
+                      @*<span class="glyphicon glyphicon-ok" aria-hidden="true" style="color:yellowgreen"></span>*@
+                    }
                   }
-                  else
+                  @* 2. Show a gray icon if this user is unauthorized (not approved) *@
+                  @if (repoUser.Approved == false)
                   {
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true" style="color:red"></span>
-
+                    <span title="This user is not Approved (authorized). To Approve, click Edit, check Approved, and Save">
+                      @Icon.Get(iconSet: "google", iconName: "block", iconSize: "lg", styleColor: "gray")
+                    </span>
                   }
-
+                  @* 3. Show a red icon if this user is deleted *@
+                  @if (isDeleted)
+                  {
+                    <span title="This user is deleted. To restore, click Edit, uncheck IsDeleted, and Save">
+                      @Icon.Get(iconSet: "google", iconName: "cancel", iconSize: "lg", styleColor: "red")
+                    </span>
+                    @* <span title="This user is deleted. To restore, click Edit, uncheck IsDeleted, and Save">@Icon.Get(iconName: "remove", iconSet: "glyph", styleColor: "red")</span> *@
+                  }
                 </td>
                 <td class="text-center">
                   <a data-hint="Edit" class="btn btn-warning btn-sm edit warning" href="@Url.Action("Edit", "UserManage", new {ctl = "Edit", itemId = item.UserId})"
